# devops-study-app

./: .pre-commit-config.yaml  mise.toml
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  frontend-tests.yaml
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/backend/: main.py
src/backend/src/data/: sessions.csv
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
